# solana-hft-ultimate-v4-triton-

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  README_DE.md  setup-v4.2-triton.sh
.github/workflows/: main.yaml
src/: config.rs  jito_optimized.rs  main.rs  monitor.rs  pump_tx.rs  rig_goat.rs  triton.rs
