[package]
name = "solana-hft-ultimate"
version = "4.2.0"
edition = "2021"
description = "High-frequency Solana sniper – Triton Dragon's Mouth gRPC, Jito bundles, xAI filter"
license = "MIT"

[[bin]]
name = "solana-hft-ultimate"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Structured logging (tracing replaces println! per CLAUDE.md)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment / .env loading (dotenvy per CLAUDE.md)
dotenvy = "0.15"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary serialisation (Solana transactions)
bincode = "1"

# HTTP client – Jito REST API, Telegram, xAI
reqwest = { version = "0.11", features = ["json"] }

# Solana SDK
solana-sdk = "1.18"

# gRPC transport (Dragon's Mouth)
tonic = { version = "0.10", features = ["tls", "tls-roots"] }

# Base-58 wallet key parsing
bs58 = "0.5"

# Base-64 encoding for Jito bundle payloads
base64 = "0.21"

# Prometheus metrics
prometheus = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
